force-app/main/default/objects/custom_create255__c/custom_create255__c.object-meta.xml
<CustomObject>
    <label>Custom created object255</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects255</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>