force-app/main/default/objects/custom_create255__c/fields/custom_create_255field564__c.field-meta.xml
<CustomField>
    <fullName>custom_create_255field564__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 255field564</label>
    <type>Checkbox</type>
</CustomField>